--- a/templates/anime_downloader_anilife_request.html
+++ b/templates/anime_downloader_anilife_request.html
@@ -22,7 +22,7 @@
 }
 </style>
 
-<div id="yommi_wrapper" class="container-fluid mt-2 mt-md-4 mx-auto content-cloak" style="max-width: 100%;">
+<div id="yommi_wrapper" class="container-fluid mt-2 mt-md-4 mx-auto anilife-common-wrapper content-cloak">
     <div id="preloader" class="loader">
         <div class="loader-inner">
             <div class="loader-line-wrap"><div class="loader-line"></div></div>
