--- a/templates/anime_downloader_anilife_request.html
+++ b/templates/anime_downloader_anilife_request.html
@@ -14,7 +14,7 @@
     margin-left: 0 !important;
     margin-right: 0 !important;
 }
-.container, .container-fluid {
+.container, .container-fluid:not(.anilife-common-wrapper) {
     width: 100% !important;
     max-width: 100% !important;
     padding-left: 0 !important;
